# ableton-live-mcp-server

./: AGENTS.md  CLAUDE.md  README.md  mcp_ableton_server.py  osc_daemon.py  pyproject.toml  run_sse_server.py  run_tests.sh
tests/: conftest.py  test_client.py  test_daemon.py  test_helpers.py  test_tools.py
