[project]
name = "ableton-live-mcp-server"
version = "0.1.0"
description = "Ableton Live MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.4.1", "python-osc>=1.9.3"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
cache_dir = "/tmp/pytest-ableton-cache"
